package handler

import (
	"context"
	pb "thaily/proto/user"
)


func (h *Handler) CreateStudent(ctx context.Context, req *pb.CreateStudentRequest) (*pb.CreateStudentResponse, error) {
	// TODO: Implement CreateStudent
	return &pb.CreateStudentResponse{}, nil
}

func (h *Handler) GetStudent(ctx context.Context, req *pb.GetStudentRequest) (*pb.GetStudentResponse, error) {
	// TODO: Implement GetStudent
	return &pb.GetStudentResponse{}, nil
}

func (h *Handler) UpdateStudent(ctx context.Context, req *pb.UpdateStudentRequest) (*pb.UpdateStudentResponse, error) {
	// TODO: Implement UpdateStudent
	return &pb.UpdateStudentResponse{}, nil
}

func (h *Handler) DeleteStudent(ctx context.Context, req *pb.DeleteStudentRequest) (*pb.DeleteStudentResponse, error) {
	// TODO: Implement DeleteStudent
	return &pb.DeleteStudentResponse{}, nil
}

func (h *Handler) ListStudents(ctx context.Context, req *pb.ListStudentsRequest) (*pb.ListStudentsResponse, error) {
	// TODO: Implement ListStudents
	return &pb.ListStudentsResponse{}, nil
}

